--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "element-plus": "^2.9.4",
+    "@tailwindcss/vite": "^4.0.9",
+    "element-plus": "^2.9.5",
     "socket.io-client": "^4.8.1",
-    "unplugin-auto-import": "^19.0.0",
-    "unplugin-vue-components": "^28.0.0",
+    "tailwindcss": "^4.0.9",
     "vue": "^3.5.13",
     "vue-router": "4"
   },
@@ -20,6 +20,8 @@
     "@vitejs/plugin-vue": "^5.2.1",
     "@vue/tsconfig": "^0.7.0",
     "typescript": "~5.7.2",
+    "unplugin-auto-import": "^19.1.1",
+    "unplugin-vue-components": "^28.4.1",
     "vite": "^6.1.0",
     "vue-tsc": "^2.2.0"
   }
