--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "element-plus": "^2.9.5",
     "socket.io-client": "^4.8.1",
     "tailwindcss": "^4.0.9",
+    "tesseract.js": "^6.0.0",
     "vue": "^3.5.13",
     "vue-router": "4"
   },
