--- a/default.conf
+++ b/default.conf
@@ -1,7 +1,14 @@
 server {
-    listen       5173;
+    listen       5173 ssl;
     server_name  localhost;
+    
+    # 指定 SSL 证书和私钥文件
+    ssl_certificate     /etc/nginx/ssl/server.crt;
+    ssl_certificate_key /etc/nginx/ssl/server.key;
 
+    # 推荐的 SSL 配置
+    ssl_protocols       TLSv1.2 TLSv1.3;
+    ssl_ciphers         HIGH:!aNULL:!MD5;
     location / {
         root   /usr/share/nginx/html;
         index  index.html index.htm;
